--- a/package.json
+++ b/package.json
@@ -14,8 +14,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.12",
     "@mui/material": "^5.15.12",
+    "@reduxjs/toolkit": "^2.2.2",
+    "@types/react-redux": "^7.1.33",
+    "mui-tel-input": "^5.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.2",
+    "react-redux": "^9.1.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
